# bibtutils

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema.json  setup.cfg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: publish-to-pypi.yaml
bibtutils/: __init__.py  sanitycheck.py
bibtutils/gcp/: __init__.py  bigquery.py  iam.py  pubsub.py  secrets.py  storage.py
bibtutils/slack/: __init__.py  alert.py  error.py  message.py
creds/: PLACE_SERV_ACCT_JSON_HERE
docs/: conf.py  contributing.rst  gcp.rst  index.rst  requirements.txt  slack.rst
docs/_build/doctrees/: README.doctree  contributing.doctree  environment.pickle  gcp.doctree  index.doctree  sanitycheck.doctree  slack.doctree
docs/_build/doctrees/modules/: alert.doctree  bigquery.doctree  pubsub.doctree  sanitycheck.doctree  secrets.doctree  storage.doctree
docs/_build/html/: .buildinfo  README.html  contributing.html  gcp.html  genindex.html  index.html  objects.inv  py-modindex.html  sanitycheck.html  search.html  searchindex.js  slack.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/bibtutils/: sanitycheck.html
docs/_build/html/_modules/bibtutils/gcp/: bigquery.html  pubsub.html  secrets.html  storage.html
docs/_build/html/_modules/bibtutils/slack/: alert.html
docs/_build/html/_sources/: contributing.rst.txt  gcp.rst.txt  index.rst.txt  sanitycheck.rst.txt  slack.rst.txt
docs/_build/html/_sources/modules/: alert.rst.txt  storage.rst.txt
docs/_build/html/_static/: alabaster.css  classic.css
docs/_build/html/modules/: alert.html  bigquery.html  pubsub.html  sanitycheck.html  secrets.html  storage.html
docs/_static/: custom.css
docs/modules/: bigquery.rst  pubsub.rst  sanitycheck.rst
docs/modules/gcp/: bigquery.rst  iam.rst  secrets.rst
docs/modules/slack/: error.rst  message.rst
tests/: config.py  test_gcp_bigquery.py  test_gcp_pubsub.py  test_gcp_secrets.py  test_gcp_storage.py
