[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["bibtutils"]

[project]
authors = [{name = "Matthew OBrien", email = "mobrien@broadinstitute.org"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "google-api-python-client==2.110.0",
  "google-api-core==2.15.0",
  "google-auth==2.25.2",
  "google-cloud-bigquery==3.13.0",
  "google-cloud-core==2.4.1",
  "google-cloud-iam==2.13.0",
  "google-cloud-pubsub==2.19.0",
  "google-cloud-secret-manager==2.17.0",
  "google-cloud-securitycenter==1.25.0",
  "google-cloud-storage==2.13.0",
  "googleapis-common-protos==1.62.0",
  "python-dateutil==2.8.2",
  "PyYAML==6.0",
  "requests==2.31.0",
  "protobuf==4.25.1",
]
description = "Functionality often used by BITS Blue Team. [DEPRECATED]"
name = "bibtutils"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
version = "2.0.1"

[project.urls]
"Bug Tracker" = "https://github.com/broadinstitute/bibtutils/issues"
"Documentation" = "https://bibtutils.readthedocs.io/en/latest/"
"Homepage" = "https://github.com/broadinstitute/bibtutils"
