[metadata]
name = bibtutils
version = 1.0.2
author = Matthew OBrien
author_email = mobrien@broadinstitute.org
description = Functionality often used by BITS Blue Team.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/broadinstitute/bibtutils
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25,<2.28
    protobuf>=3.20,<4.0
    python-dateutil==2.8.*
    google-api-core>=2.7
    google-api-python-client>=2.15
    google-auth>=1.30,<2.6
    google-cloud-iam>=2.6
    google-cloud-core>=2.3
    google-cloud-storage>=1.38,<2.6
    google-cloud-bigquery>=2.18,<2.33
    google-cloud-pubsub>=2.5,<2.10
    google-cloud-secret-manager>=2.4,<2.9
    google-cloud-securitycenter>=1.3,<1.9
    googleapis-common-protos>=1.53
zip_safe = True
