[metadata]
name = bibtutils
version = 1.1.1
author = Matthew OBrien
author_email = mobrien@broadinstitute.org
description = Functionality often used by BITS Blue Team.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/broadinstitute/bibtutils
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    python-dateutil>=2.8.0
    google-api-core>=2.11
    google-api-python-client>=2.15
    google-auth>=2.20.0
    google-cloud-iam>=2.12.0
    google-cloud-core>=2.3
    google-cloud-storage>=2.9.0
    google-cloud-bigquery>=3.11.1
    google-cloud-pubsub>=2.5
    google-cloud-secret-manager>=2.4
    google-cloud-securitycenter>=1.22.0
    googleapis-common-protos>=1.59.1
    protobuf>=4.23.3
zip_safe = True
