[metadata]
name = bibtutils
version = 1.2.1
author = Matthew OBrien
author_email = mobrien@broadinstitute.org
description = Functionality often used by BITS Blue Team.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/broadinstitute/bibtutils
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    python-dateutil
    google-api-core
    google-api-python-client
    google-auth
    google-cloud-iam
    google-cloud-core
    google-cloud-storage
    google-cloud-bigquery
    google-cloud-pubsub
    google-cloud-secret-manager
    google-cloud-securitycenter
    googleapis-common-protos
    protobuf
zip_safe = True
